syntax = "proto3";

package github.com.DeNisBuLgAkOv.msa_big_tech.auth.v1;

import "buf/validate/validate.proto";

option go_package = "msa_big_tech/pkg/api/proto/v1;auth";


// Регистрация
message RegisterRequest {

  string email = 1 [(buf.validate.field).string = {
    email: true
  }];

  string password = 2 [(buf.validate.field).string = {
    min_len: 8,
    max_len: 100
  }];
}

message RegisterResponse {
    string user_id = 1 [(buf.validate.field).string.min_len = 1];
}

// Авторизация
message LoginRequest {

  string email = 1 [(buf.validate.field).string = {
    email: true
  }];

  string password = 2 [(buf.validate.field).string = {
    min_len: 8,
    max_len: 100
  }];
}

message LoginResponse {
  string user_id = 1 [(buf.validate.field).string.min_len = 1];
  string access_token = 2 [(buf.validate.field).string.min_len = 1];
  string refresh_token = 3 [(buf.validate.field).string.min_len = 1];
}

// Обновление токена
message RefreshRequest {
  string refresh_token = 1 [(buf.validate.field).string.min_len = 1];
}

message RefreshResponse { 
  string user_id = 1 [(buf.validate.field).string.min_len = 1];
  string access_token = 2 [(buf.validate.field).string.min_len = 1];
  string refresh_token = 3 [(buf.validate.field).string.min_len = 1];
}